<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mtplview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/intro_background"
    android:layout_width="match_parent"

    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.app.elixir.TravelB2B.mtplview.MtplTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginLeft="@dimen/margin_15dp"
            android:layout_marginRight="@dimen/margin_15dp"
            android:gravity="center"
            android:text="@string/title2"
            mtplview:TypeFace="@string/fontface_DroidSerif_Bold" />

        <ImageView
            android:id="@+id/tv"
            android:layout_width="@dimen/margin_120dp"
            android:layout_height="@dimen/margin_120dp"
            android:layout_gravity="center_horizontal|center"
            android:src="@drawable/sc2" />

        <com.app.elixir.TravelB2B.mtplview.MtplTextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginLeft="@dimen/margin_15dp"
            android:layout_marginRight="@dimen/margin_15dp"
            android:gravity="center"
            android:text="@string/description3"
            mtplview:TypeFace="@string/fontface_DroidSerif_Regular" />

    </LinearLayout>

</FrameLayout>