<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:mtplview="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp"
    card_view:cardUseCompatPadding="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.app.elixir.TravelB2B.mtplview.MtplTextView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:maxLines="1"
                    android:padding="@dimen/margin_5dp"
                    android:text="@string/hname"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/font_12sp"
                    mtplview:TypeFace="@string/fontface_DroidSerif_Bold" />

                <com.app.elixir.TravelB2B.mtplview.MtplTextView
                    android:id="@+id/txthName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:maxLines="1"
                    android:padding="@dimen/margin_5dp"
                    android:textSize="@dimen/font_12sp"
                    mtplview:TypeFace="@string/fontface_DroidSerif_Regular" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.app.elixir.TravelB2B.mtplview.MtplTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:maxLines="1"
                    android:padding="@dimen/margin_5dp"
                    android:text="@string/tview"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/font_12sp"
                    mtplview:TypeFace="@string/fontface_DroidSerif_Bold" />

                <com.app.elixir.TravelB2B.mtplview.MtplTextView
                    android:id="@+id/txtvcount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:maxLines="1"
                    android:padding="@dimen/margin_5dp"
                    android:textSize="@dimen/font_12sp"
                    mtplview:TypeFace="@string/fontface_DroidSerif_Regular" />


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>

